# infraslow

./: .gitignore  README.md  demo_infraslow_yasa_compare.sbatch  pyproject.toml  requirements.txt  run_all_metrics.sbatch  run_extract_features.sbatch  run_group_analysis.sbatch  run_group_analysis_by_peak.sh  run_infraslow_yasa_compare.sbatch
md/: group_analysis.md  refactor_v1.md  slide.md  update-metrics.md
src/: __init__.py  all_metrics_calculatation.ipynb  analyse_infraslow.ipynb  demo_infraslow_yasa.ipynb  demo_infraslow_yasa_average.ipynb  demo_infraslow_yasa_compare.ipynb  demo_infraslow_yasa_compare.py  demo_preprocessing_N2.ipynb  extract_features.py  group_analysis.py  infraslow_yasa_compare.py  match_cohort.py  plot_infraslow.ipynb  run_all_metrics.py
src/infraslow/: __init__.py  __main__.py  helpers.py  utils.py
src/infraslow/io/: __init__.py  availability.py  csv_tools.py  helpers.py  hypnodensity.py  psg_loader.py  utils.py
src/infraslow/processing/: __init__.py  all_metrics.py  detection.py  detection_luna.py  helpers.py  infraslow.py  merge.py  signal.py  sleep_params.py  spindle.py  subject_pipeline.py  utils.py
src/infraslow/stats/: __init__.py  effect_sizes.py  group_assignment.py  group_comparison.py  infraslow.py  spindle.py
src/infraslow/viz/: __init__.py  group_analysis.py  helpers.py  hypnogram.py  (+5 more)
src/tmp/: demo_all.ipynb  demo_compared_infraslow.ipynb  demo_compared_spindle.ipynb  demo_infraslow_luna.ipynb  demo_infraslow_luna_average.ipynb  demo_spindles_detect.ipynb  pipeline_maching_subjects.py  pipeline_maching_subjects_v2.py
