[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infraslow"
version = "0.1.0"
description = "PSG/EDF loading and sleep-study CSV merge + sleep-parameter processing for the Bioserenity dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "mne",
    "yasa",
    "seaborn",
    "lunapi==1.6.5",
    "statsmodels",
    "matplotlib",
    "joblib",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# src-layout: make the package importable in tests without an editable install.
pythonpath = ["src"]
testpaths = ["tests"]
